mamba unless conda

--- a/.github/workflows/python-package-conda.yml
+++ b/.github/workflows/python-package-conda.yml
@@ -15,31 +15,24 @@ jobs:
 
       - name: Checkout
         uses: actions/checkout@v3.5.2
-        
-      - name: Setup_conda_and_cache
-        uses: actions/cache@v2
-        env:
-          # Increase this value to reset cache if etc/example-environment.yml has not changed
-          CACHE_NUMBER: 0
-        with:
-          path: ~/conda_pkgs_dir
-          key:
-            ${{ runner.os }}-conda-${{ env.CACHE_NUMBER }}-${{
-            hashFiles('atlasenv.yml') }}
-      - uses: conda-incubator/setup-miniconda@v2
-        with:
-          activate-environment: atlasenv
-          use-mamba: true
-          python-version: 3.11
-          mamba-version: "*"
-          channels: conda-forge,bioconda,defaults
-          environment-file: atlasenv.yml
-          use-only-tar-bz2: true # IMPORTANT: This needs to be set for caching to work properly!
 
+      - name: Get current month
+        id: date
+        run: echo "date=$(date +%Y-%m)" >> "${GITHUB_OUTPUT}"
+
+      - uses: mamba-org/setup-micromamba@v1
+        with:
+          environment-file: atlasenv.yml
+          #environment-name: atlasenv
+          # persist on the same month.
+          cache-environment-key: environment-${{ steps.date.outputs.date }}
+          cache-downloads-key: downloads-${{ steps.date.outputs.date }}
+
+      - name: check mamba
+        run: mamba --help
 
       - name: Install atlas
         run: |
-           echo "You are using env '$CONDA_PREFIX'"
            python -m pip install . --no-deps -vv
       - name: Test atlas
         run: |
