--- a/.github/workflows/python-package-conda.yml
+++ b/.github/workflows/python-package-conda.yml
@@ -25,8 +25,8 @@ jobs:
           environment-file: atlasenv.yml
           environment-name: atlasenv
           # persist on the same month.
-          cache-environment-key: environment-${{ steps.date.outputs.date }}
-          cache-downloads-key: downloads-${{ steps.date.outputs.date }}
+          cache-environment-key: atlasenv-${{ steps.date.outputs.date }}
+
 
       - name: Install atlas
         run: |
@@ -46,14 +46,46 @@ jobs:
 
       - name: Test init many samples
         run: ./test/test_init_many_samples.sh
-    
-  # full-test:
-  #   runs-on: ubuntu-latest
-  #   needs: build-and-dryrun
-  #   strategy:
-  #     max-parallel: 1
 
-    # steps:
+      # - name: Cache atlas instalation
+      #   uses: actions/cache@v2
+      #   env:
+      #     cache-name: cache-atlas
+      #   with:
+      #     # npm cache files are stored in `~/.npm` on Linux/macOS
+      #     path: ~/.npm
+      #     key: ${{ runner.os }}-build-${{ env.cache-name }}-${{ hashFiles('**/package-lock.json') }}
+      #     restore-keys: |
+      #       ${{ runner.os }}-build-${{ env.cache-name }}-
+      #       ${{ runner.os }}-build-
+      #       ${{ runner.os }}-
+    
+  full-test:
+    runs-on: ubuntu-latest
+    needs: build-and-dryrun
+    strategy:
+      max-parallel: 1
+    env:
+      N_THREADS: 2
+      MEM: 3
+
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v3.5.2
+
+      - uses: mamba-org/setup-micromamba@v1
+        with:
+          environment-file: atlasenv.yml
+          environment-name: atlasenv
+          # persist on the same month.
+          cache-environment-key: atlasenv-
+
+
+      - name: Install atlas
+        run: |
+          python -m pip install . --no-deps -vv
+          atlas --help
+
       - name: Clone Example Data Repository
         run: git clone https://github.com/metagenome-atlas/example_data.git
       
