--- a/.github/workflows/python-package-conda.yml
+++ b/.github/workflows/python-package-conda.yml
@@ -86,6 +86,20 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v3.5.2
 
+
+      - uses: mamba-org/setup-micromamba@v1
+        with:
+          environment-file: atlasenv.yml
+          environment-name: atlasenv
+          cache-environment-key: atlasenv-
+
+
+      - name: Install atlas
+        run: |
+          python -m pip install . --no-deps -vv
+          atlas --help
+
+
       - name: Download test data
         run: |
           wget https://zenodo.org/record/3992790/files/test_reads.tar.gz
