--- a/.github/workflows/python-package-conda.yml
+++ b/.github/workflows/python-package-conda.yml
@@ -170,46 +170,46 @@ jobs:
 
 
 
-  full-test:
-    runs-on: ubuntu-latest
-    needs: build-and-dryrun
-    strategy:
-      max-parallel: 1
-    env:
-      N_THREADS: 2
-      MEM: 3
+  # full-test:
+  #   runs-on: ubuntu-latest
+  #   needs: build-and-dryrun
+  #   strategy:
+  #     max-parallel: 1
+  #   env:
+  #     N_THREADS: 2
+  #     MEM: 3
 
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v3.5.2
+  #   steps:
+  #     - name: Checkout
+  #       uses: actions/checkout@v3.5.2
 
-      - uses: mamba-org/setup-micromamba@v1
-        with:
-          environment-file: atlasenv.yml
-          environment-name: atlasenv
-          cache-environment-key: atlasenv-
+  #     - uses: mamba-org/setup-micromamba@v1
+  #       with:
+  #         environment-file: atlasenv.yml
+  #         environment-name: atlasenv
+  #         cache-environment-key: atlasenv-
 
 
-      - name: Install atlas
-        run: |
-          python -m pip install . --no-deps -vv
-          atlas --help
+  #     - name: Install atlas
+  #       run: |
+  #         python -m pip install . --no-deps -vv
+  #         atlas --help
 
-      # - name: Clone Example Data Repository
-      #   run: git clone https://github.com/metagenome-atlas/example_data.git
+  #     # - name: Clone Example Data Repository
+  #     #   run: git clone https://github.com/metagenome-atlas/example_data.git
       
-      - name: Run Test
-        run: |
-          test/test_ci.sh --resources mem=$MEM java_mem=$MEM --jobs=$N_THREADS --restart-times=2
+  #     - name: Run Test
+  #       run: |
+  #         test/test_ci.sh --resources mem=$MEM java_mem=$MEM --jobs=$N_THREADS --restart-times=2
 
-      - name: Store Logs
-        uses: actions/upload-artifact@v2
-        with:
-          name: logs
-          path: test_ci/logs
+  #     - name: Store Logs
+  #       uses: actions/upload-artifact@v2
+  #       with:
+  #         name: logs
+  #         path: test_ci/logs
 
-      - name: Store Sample Logs
-        uses: actions/upload-artifact@v2
-        with:
-          name: sample_logs
-          path: test_ci/Streptococcus/logs
+  #     - name: Store Sample Logs
+  #       uses: actions/upload-artifact@v2
+  #       with:
+  #         name: sample_logs
+  #         path: test_ci/Streptococcus/logs
