--- a/.github/workflows/python-package-conda.yml
+++ b/.github/workflows/python-package-conda.yml
@@ -48,36 +48,10 @@ jobs:
         run: ./test/test_init_many_samples.sh
 
 
-  test-qc:
+
+  run-qc-and-assembly:
     runs-on: ubuntu-latest
     needs: build-and-dryrun
-    strategy:
-      max-parallel: 1
-    env:
-      N_THREADS: 2
-      MEM: 3
-      DATABASE_DIR: databases
-
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v3.5.2
-
-      - uses: mamba-org/setup-micromamba@v1
-        with:
-          environment-file: atlasenv.yml
-          environment-name: atlasenv
-          cache-environment-key: atlasenv-
-
-
-      - name: Install atlas
-        run: |
-          python -m pip install . --no-deps -vv
-          atlas --help
-
-
-
-  qc_and_assembly:
-    runs-on: ubuntu-latest
     env:
       N_THREADS: 2
       MEM: 3
@@ -133,8 +107,6 @@ jobs:
       - name: Cache conda envs
         if: steps.get-enfs.outputs.cache-hit != 'true'
         uses: actions/cache@v2
-        env:
-          cache-name: assembly-conda-envs
         with:
           path: databases/conda_envs
           key: assembly-conda-envs
@@ -158,16 +130,80 @@ jobs:
         uses: actions/upload-artifact@v2
         with:
           name: sample_logs
-          path: wd/Streptococcus/logs
+          path: wd/Sample1/logs
 
 
+      - name: Cache working dir
+        uses: actions/cache@v2
+        with:
+          path: wd
+          key: assembly-working-dir
+      
+  
 
-        
-    
+  run-genecatalog:
+    runs-on: ubuntu-latest
+    needs: run-qc-and-assembly
+    env:
+      N_THREADS: 2
+      MEM: 3
+
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v3.5.2
 
 
+      - uses: mamba-org/setup-micromamba@v1
+        with:
+          environment-file: atlasenv.yml
+          environment-name: atlasenv
+          cache-environment-key: atlasenv-
 
 
+      - name: install atlas
+        run: |
+          python -m pip install . --no-deps -vv
+          atlas --help
+
+
+      - name: get conda envs
+        id: get-genecatalog-envs
+        uses: actions/cache@v2
+        with:
+          path: databases/conda_envs
+          key: binning-conda-envs
+          restore-keys: |
+            assembly-conda-envs
+
+      - name: Restore working dir
+        uses: actions/cache@v2
+        with:
+          path: wd
+          key: assembly-working-dir
+
+      - name: dryrun assembly shold need nothing to be done
+        run: |
+          ls -l wd
+          atlas run assembly -n
+
+  
+      - name: Test Genecatalog
+        run: |
+          atlas run genecatalog --resources mem=$MEM java_mem=$MEM --jobs=$N_THREADS --restart-times=2 --working-dir wd
+
+      - name: Store Logs
+        uses: actions/upload-artifact@v2
+        with:
+          name: logs
+          path: wd/logs
+
+      - name: Store Sample Logs
+        uses: actions/upload-artifact@v2
+        with:
+          name: sample_logs
+          path: wd/Sample1/logs
+
+  
 
 
   # full-test:
@@ -212,4 +248,4 @@ jobs:
   #       uses: actions/upload-artifact@v2
   #       with:
   #         name: sample_logs
-  #         path: test_ci/Streptococcus/logs
+  #         path: test_ci/Sample1/logs
