--- a/.github/workflows/python-package-conda.yml
+++ b/.github/workflows/python-package-conda.yml
@@ -119,8 +119,13 @@ jobs:
       # - name: compress conda envs
       #   run: |
       #     tar -czf assembly_conda_envs.tar.gz $DATABASE_DIR/conda_envs
+      - name: list databases
+        run: | 
+          echo $DATABASE_DIR
+          ls -l $DATABASE_DIR
+          ls -l $DATABASE_DIR/conda_envs
 
-      - name: Cache conda envs
+      - name: Store conda envs
         if: steps.get-envs.outputs.cache-hit != 'true'
         uses: actions/cache/save@v3
         with:
